add consents doc

--- a/source/includes/i18n.md
+++ b/source/includes/i18n.md
@@ -1,5 +1,7 @@
 # I18n
 
+### Descrizione
+
 Per localizzare i messaggi di errore in italiano specificare nelle richieste http il seguente header:
 
 `Accept-Language: it`
